--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+-- 0.1.4
+-- Migrate away from django-custom-auth
+-- You will need to manually migrate existing users.
+-- Backup data before upgrading
+
 -- 0.1.2
 -- Add news app
 
