--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+-- 0.1.5
+-- Update checkout process to work with Stripe
+-- Update checkout process to send emails
+
 -- 0.1.4
 -- Migrate away from django-custom-auth
 -- You will need to manually migrate existing users.
